<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_small"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="3">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.6"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="7">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|center_horizontal|left"
            android:hint="@string/str_username"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|center_horizontal|left"
            android:hint="@string/str_Email"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <Spinner
            android:id="@+id/spTimeZoon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawSelectorOnTop="true"
            android:spinnerMode="dropdown" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|center_horizontal|left"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|center_horizontal|left"
            android:hint="@string/str_conpassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:background="@color/colorGreen"
            android:gravity="center_horizontal|center"
            android:text="@string/str_signup"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:weightSum="1.5">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtAlready"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/str_loginal"
                android:textColor="@color/colorBlue"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="3dp"
                android:text="@string/str_loginnow"
                android:textAllCaps="true"
                android:textColor="@color/colorBlue"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>