<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_small"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="4">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.6"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center|center_horizontal"
                    android:hint="@string/str_username"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="05dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center|center_horizontal"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="23dp"
                android:layout_weight="3"
                android:background="@color/colorGreen"
                android:gravity="center_horizontal|center"
                android:text="@string/str_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="10">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="#81B6D6" />

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_horizontal|center"
                    android:text="@string/str_forgotpassword"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="#81B6D6" />


            </LinearLayout>

            <!--  <TextView
                  android:id="@+id/txtForgotPassword"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_marginTop="10dp"
                  android:layout_weight="2"
                  android:gravity="center_horizontal|center"
                  android:text="@string/str_forgotpassword"
                  android:textColor="#fff"
                  android:textSize="16sp" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/str_signup"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
